--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "React test code",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
     "hot": "webpack-dev-server --hot --inline",
     "server": "webpack-dev-server --progress --color",
+    "lint": "eslint src",
+    "test": "eslint src && jest",
     "build": "webpack"
   },
   "author": "thirdj",
@@ -15,8 +16,15 @@
   "devDependencies": {
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
+    "babel-eslint": "^5.0.0-beta6",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^3.1.0",
+    "eslint-config-standard": "^4.4.0",
+    "eslint-plugin-react": "^3.15.0",
+    "eslint-plugin-standard": "^1.3.1",
+    "jest-cli": "^0.8.2",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "react": "^0.14.6",
